force-app/main/default/objects/Newsletter__c/Newsletter__c.object-meta.xml
<CustomObject>
    <label>Newsletter</label>
    <nameField>
        <displayFormat>NEWS-{0000}</displayFormat>
        <label>Newsletter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newsletters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>