force-app/main/default/objects/Newsletter__c/fields/Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscriptions__c</fullName>
    <label>Active Subscriptions</label>
    <summaryFilterItems>
        <field>Newsletter_Subscription__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Newsletter_Subscription__c.Newsletter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>