force-app/main/default/objects/Newsletter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Category__c</columns>
    <columns>Active_Subscriptions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>